--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@tiptap/pm": "^2.11.7",
     "@tiptap/react": "^2.11.7",
     "@tiptap/starter-kit": "^2.11.7",
+    "@xyflow/react": "^12.6.0",
     "axios": "^1.9.0",
     "clsx": "2.1.1",
     "framer-motion": "11.15.0",
@@ -56,8 +57,8 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "@types/node": "20.5.7",
-    "@types/react": "18.3.3",
+    "@types/node": "^22.15.12",
+    "@types/react": "^19.1.3",
     "@types/react-dom": "18.3.0",
     "@typescript-eslint/eslint-plugin": "8.11.0",
     "@typescript-eslint/parser": "8.11.0",
